fix(nanno): default comparator for ChrPosition incorrectly sorting contig names